fill, shape etc

--- a/tensorflow_operations.ipynb
+++ b/tensorflow_operations.ipynb
@@ -246,10 +246,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[4 4 4]\n",
+      " [4 4 4]], shape=(2, 3), dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "fill_tensor = tf.fill(dims=[2,3], value=4)\n",
+    "print(fill_tensor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[[-8 -8 -8]\n",
+      "  [-8 -8 -8]]\n",
+      "\n",
+      " [[-8 -8 -8]\n",
+      "  [-8 -8 -8]]], shape=(2, 2, 3), dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "fill_tensor_three = tf.fill(dims=[2,2,3], value=-8)\n",
+    "print(fill_tensor_three)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[[1 1 1]\n",
+      "  [1 1 1]]\n",
+      "\n",
+      " [[1 1 1]\n",
+      "  [1 1 1]]], shape=(2, 2, 3), dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "one_like_tensor = tf.ones_like(input=three_d_tensor)\n",
+    "print(one_like_tensor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(3,), dtype=int32, numpy=array([2, 2, 3], dtype=int32)>"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t = tf.constant([[[1, 1, 1], [2, 2, 2]], [[3, 3, 3], [4, 4, 4]]])\n",
+    "tf.shape(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2,), dtype=int32, numpy=array([2, 3], dtype=int32)>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t = tf.constant([[1, 1, 1], [2, 2, 2]])\n",
+    "tf.shape(t)"
+   ]
   }
  ],
  "metadata": {
